--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+  <label><input type="radio" name="options" value="1"> Option 1</label><br>
+  <label class="input"><input type="radio" name="options" value="2" disabled> Option 2</label><br>
+  <label><input type="radio" name="options" value="3" checked> Option 3</label><br>
+  <label class="input"><input type="radio" name="options" value="4"> Option 4</label><br>
+  <label><input type="radio" name="options" value="5"> Option 5</label><br>
+  <label class="input"><input type="radio" name="options" value="6"> Option 6</label><br>
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
